hphp/test/slow/parser/initializer-static-1.php.expectf

Fatal error: Invalid expression in constant initializer in %s/initializer-static-1.php on line 4
